// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile/TilePresenter renders when focused 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.emotion-4 {
  box-sizing: border-box;
  position: relative;
  padding: 12px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  margin-bottom: 8px;
}

.emotion-1 {
  font-size: 14px;
  font-weight: 700;
  line-height: 1.333333333;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-3 {
  font-size: 12px;
  font-weight: 400;
  line-height: 1.272727273;
  margin-bottom: 8px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-5 {
  background-color: rgba(255,255,255,0.5);
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  outline: 1px solid transparent;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  -webkit-transition-property: background-color,box-shadow,opacity,outline;
  transition-property: background-color,box-shadow,opacity,outline;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  box-shadow: 0 0 0 4px rgba(6,150,215,0.35);
}

<div
  className="emotion-5"
  role="listitem"
  tabIndex={0}
>
  <div
    className="emotion-0"
  >
    <div>
      <img
        src="https://d95xa459ljwvg.cloudfront.net/theme/weave-logo.svg"
      />
    </div>
  </div>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-1"
      >
        Tile title
      </div>
    </div>
    <div
      className="emotion-3"
    />
  </div>
</div>
`;

exports[`tile/TilePresenter renders when hovered 1`] = `
.emotion-5 {
  background-color: rgba(255,255,255,0.7);
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  outline: 1px solid transparent;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  -webkit-transition-property: background-color,box-shadow,opacity,outline;
  transition-property: background-color,box-shadow,opacity,outline;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  box-shadow: none;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.emotion-4 {
  box-sizing: border-box;
  position: relative;
  padding: 12px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  margin-bottom: 8px;
}

.emotion-1 {
  font-size: 14px;
  font-weight: 700;
  line-height: 1.333333333;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-3 {
  font-size: 12px;
  font-weight: 400;
  line-height: 1.272727273;
  margin-bottom: 8px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="emotion-5"
  role="listitem"
  tabIndex={0}
>
  <div
    className="emotion-0"
  >
    <div>
      <img
        src="https://d95xa459ljwvg.cloudfront.net/theme/weave-logo.svg"
      />
    </div>
  </div>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-1"
      >
        Tile title
      </div>
    </div>
    <div
      className="emotion-3"
    />
  </div>
</div>
`;

exports[`tile/TilePresenter renders when pressed 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.emotion-4 {
  box-sizing: border-box;
  position: relative;
  padding: 12px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  margin-bottom: 8px;
}

.emotion-1 {
  font-size: 14px;
  font-weight: 700;
  line-height: 1.333333333;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-3 {
  font-size: 12px;
  font-weight: 400;
  line-height: 1.272727273;
  margin-bottom: 8px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-5 {
  background-color: #ffffff;
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  outline: 1px solid transparent;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  -webkit-transition-property: background-color,box-shadow,opacity,outline;
  transition-property: background-color,box-shadow,opacity,outline;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  box-shadow: none;
}

<div
  className="emotion-5"
  role="listitem"
  tabIndex={0}
>
  <div
    className="emotion-0"
  >
    <div>
      <img
        src="https://d95xa459ljwvg.cloudfront.net/theme/weave-logo.svg"
      />
    </div>
  </div>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-1"
      >
        Tile title
      </div>
    </div>
    <div
      className="emotion-3"
    />
  </div>
</div>
`;
